--- a/uebung07.ipynb
+++ b/uebung07.ipynb
@@ -1,19 +1,212 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "45dbb53c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dcf9e77",
+   "metadata": {},
+   "source": [
+    "Das Ziel dieser Übung ist es, die Programmiersprache Python und jupyter notebooks kennenzulernen, um sie in den nächsten Übungen immer wieder nutzen zu können.\n",
+    "\n",
+    "Die jupyter notebooks können als interaktives Notizbuch verstanden werden. Tatsächlich sind solche Notebooks nicht nur zum Lernen sondern auch für den ingenieurpraktischen Alltag sehr sinnvoll. Man kann dabei leicht Auswertungen, Analysen und Dokumentation an einem Ort zusammenführen. Größere Programmcodes können zwar manchmal in Notebooks vorteilhaft entwickelt und getestet werden, diese werden dann aber doch meist \"klassisch\" als Python-Module gespeichert. Diese Python-Module können dann aber wieder in jupyter notebooks geladen werden. Damit kann man Programmcode (im Hintergrund als Modul) und Auswertung (im Notebook) trennen.\n",
+    "\n",
+    "Anders als C++ und Java verwendet Python zum Trennen von Operationen keine geschweiften Klammern. Stattdessen wird über das Einrücken von Zeilen eine Trennung vorgenommen.\n",
+    "\n",
+    "Ein Notebook ist eine Ansammlung von Zellen. Jede Zelle kann markdown (also Text) oder Code enthalten.\n",
+    "\n",
+    "Viel Erfolg und Spaß!# Zelle 3\n",
+    "b = 30"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6154e54f",
+   "metadata": {},
+   "source": [
+    "## Einführung\n",
+    "\n",
+    "### Importieren der notwendigen Pakete\n",
+    "\n",
+    "Python ist eine mächtige Programmiersprache, die größte Stärke von ihr sind aber die vielen zusätzlichen Pakete, die einfach eingebunden werden können. Bitte führt die folgende Zelle zu Beginn aus (zuerst reinklicken, dann \"Strg + Enter\"). Hier wird das Paket <code>numpy</code> eingebunden. Das Paket ist für viele grundlegende Mathematik-Aufgaben hilfreich und wir verwenden es im folgenden mehrfach. Um nicht jedes mal <code>numpy</code> ausschreiben zu müssen, wenn eine Funktion daraus verwendet wird, hat es sich etabliert, <code>as np</code> in den Code zu schreiben, damit der Code ein bisschen übersichtlicher wird."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "142ca4fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1260c98",
+   "metadata": {},
+   "source": [
+    "### Zellstruktur\n",
+    "\n",
+    "Die Notebooks bestehen aus einzelnen Zellen. Der Programmcode einer Zelle kann mit \"Strg + Enter\" ausgeführt werden. Bei Textzellen wird dann nur die Formatierung dargestellt, Codezellen werden ausgeführt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cb433eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello World!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9885e1b",
+   "metadata": {},
+   "source": [
+    "Um eine Zeile auszukommentieren, kann eine <code>#</code> verwendet werden:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5c0fda9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello world 1!\")\n",
+    "#print(\"Hello world 2!\")\n",
+    "print(\"Hello world 3!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a24a7a9",
+   "metadata": {},
+   "source": [
+    "Mit dem Gleichheitszeichen kann einer Variable ein Wert zugewiesen werden:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb9cea7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ausgabetest = \"Hello World!\"\n",
+    "\n",
+    "print(ausgabetest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8a950ba",
+   "metadata": {},
+   "source": [
+    "Steht in der letzten Zeile einer Zelle ein Variablenname, so wird dieser beim Ausführen der Zelle ausgegeben:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f23dc25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ausgabetest = \"Hello World!\"\n",
+    "\n",
+    "ausgabetest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6500f13",
+   "metadata": {},
+   "source": [
+    "Die Variablen werden in einen Zellübergreifenden Arbeitsspeicher geschrieben, also kann auch eine spätere Zelle eine früher definierte Variable verwenden:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f47920f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ausgabetest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94c821db",
+   "metadata": {},
+   "source": [
+    "Anders als ein \"normaler\" Code, wird bei Jupyter Notebooks nicht immer das gesamte Dokument ausgeführt. Stattdessen wird der Code Zellweise durchgelaufen. Die Variablen Führt die Zellen in dieser Reihenfolge aus. Wichtig ist hierbei nicht die räumliche Position im Dokument, sondern nur, welche Zelle wann ausgeführt wurde.\n",
+    "\n",
+    "Führt die folgenden Zellen in dieser Reihenfolge aus:\n",
+    "\n",
+    "Zelle 1, Zelle 2, Zelle 3, Zelle 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b8d283b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zelle 1\n",
+    "a = 10\n",
+    "b = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "422acbb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zelle 2\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79284954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Zelle 3\n",
+    "b = 30"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
