Fix markdown formatting in Jupyter notebook

--- a/uebung07.ipynb
+++ b/uebung07.ipynb
@@ -11,6 +11,7 @@
    "id": "3dcf9e77",
    "metadata": {},
    "source": [
+    "# GLLB Übung 7 - Einführung in Jupyter Notebooks mit Python \n",
     "Das Ziel dieser Übung ist es, die Programmiersprache Python und jupyter notebooks kennenzulernen, um sie in den nächsten Übungen immer wieder nutzen zu können.\n",
     "\n",
     "Die jupyter notebooks können als interaktives Notizbuch verstanden werden. Tatsächlich sind solche Notebooks nicht nur zum Lernen sondern auch für den ingenieurpraktischen Alltag sehr sinnvoll. Man kann dabei leicht Auswertungen, Analysen und Dokumentation an einem Ort zusammenführen. Größere Programmcodes können zwar manchmal in Notebooks vorteilhaft entwickelt und getestet werden, diese werden dann aber doch meist \"klassisch\" als Python-Module gespeichert. Diese Python-Module können dann aber wieder in jupyter notebooks geladen werden. Damit kann man Programmcode (im Hintergrund als Modul) und Auswertung (im Notebook) trennen.\n",
@@ -19,8 +20,7 @@
     "\n",
     "Ein Notebook ist eine Ansammlung von Zellen. Jede Zelle kann markdown (also Text) oder Code enthalten.\n",
     "\n",
-    "Viel Erfolg und Spaß!# Zelle 3\n",
-    "b = 30"
+    "Viel Erfolg und Spaß!\n"
    ]
   },
   {
