Fix typo in instruction for calculating the inverse of a matrix in Jupyter notebook

--- a/uebung07.ipynb
+++ b/uebung07.ipynb
@@ -253,7 +253,7 @@
    "id": "f3846b87",
    "metadata": {},
    "source": [
-    "Berechnen Sie in der folgenden Zelle das Inverse der oben definerten Matrix <code>matrix_a</code> mittels der Funktion <code>np.linalg.invers()</code> und geben Sie es mit dem <code>print</code>-Befehl aus."
+    "Berechnen Sie in der folgenden Zelle das Inverse der oben definerten Matrix <code>matrix_a</code> mittels der Funktion <code>np.linalg.inv()</code> und geben Sie es mit dem <code>print</code>-Befehl aus."
    ]
   },
   {
