Update exercise numbers in Jupyter Notebook from 1.x to 7.x

--- a/musterloesung07.ipynb
+++ b/musterloesung07.ipynb
@@ -629,7 +629,7 @@
    "id": "0dc1b0d3",
    "metadata": {},
    "source": [
-    "### <span style=\"color:red\"> Aufgabe 1.1 - Definieren einer Funktion </span>\n",
+    "###  Aufgabe 7.1 - Definieren einer Funktion \n",
     "\n",
     "a) Definiere eine Funktion, die überprüft, ob durch eine angreifende Normalkraft die zulässige Dehnung überschritten wird.\n",
     "\n",
@@ -896,7 +896,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:red\">Aufgabe 1.2 Erzeugen einer Methode zur Berechnung der Masse </span>\n",
+    "### Aufgabe 7.2 Erzeugen einer Methode zur Berechnung der Masse \n",
     "\n",
     "Vervollständige die folgende Codezelle so, das eine Methode zur Berechnung der Masse des Stabs implementiert ist und probiere sie aus. \n",
     "\n",
@@ -951,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:red\">Aufgabe 1.3 Erzeugen einer Klasse für Balken </span>\n",
+    "### Aufgabe 7.3 Erzeugen einer Klasse für Balken \n",
     "\n",
     "a) Programmiere eine Klasse Balken, der die Parameter Länge, E-Modul und Flächenträgheitsmoment übergeben bekommt. Definiere zusätzlich eine Methode, die für den Balkendie Durchbiegung ermittelt.\n",
     "\n",
@@ -1132,8 +1132,8 @@
    "id": "60c353cf",
    "metadata": {},
    "source": [
-    "### <span style=\"color:red\">Aufgabe 1.4 Plotten der Biegelinie des Balkens </span>\n",
-    "In Aufgabe 1.3 wurde eine Funktion zur Berechnung der Durchbiegung eines Balkens unter Einzellast implementiert. Die Funktion gibt für beliebige Lasten und Positionen entlang des Balkens die Durchbiegung aus.\n",
+    "### Aufgabe 7.4 Plotten der Biegelinie des Balkens \n",
+    "In Aufgabe 7.3 wurde eine Funktion zur Berechnung der Durchbiegung eines Balkens unter Einzellast implementiert. Die Funktion gibt für beliebige Lasten und Positionen entlang des Balkens die Durchbiegung aus.\n",
     "\n",
     "Plotten sie nun die Durchbiegung des Gesamtenbalkens aus der Aufgabe für verschiedene Einzellasten (F = 5, 10, 15)\n",
     "\n",
