--- a/uebung08.ipynb
+++ b/uebung08.ipynb
@@ -1,1 +1,255 @@
-Übung 08
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "1689fea5",
+   "metadata": {},
+   "source": [
+    "# Übung 8 - Laminatanalyse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0a589a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def print_arr(array):\n",
+    "    df = pd.DataFrame(array)\n",
+    "    print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "803fa705",
+   "metadata": {},
+   "source": [
+    "Ziel dieser Übung ist es, gemeinsam eine Software zur Laminatanalyse zu entwickeln. Hierfür soll nach den Schritten aus der Vorlesung, bzw. dem Skript vorgegangen werden:\n",
+    "\n",
+    "1. Kenngrößen der UD-Schichten bestimmen\n",
+    "2. Reduzierte Steifigkeit jeder Schicht bestimmen\n",
+    "3. Reduzierte Steifigkeit jeder Schicht in globales Koordinatensystem drehen\n",
+    "4. ABD-Matrix durch Integration bestimmen\n",
+    "5. Invertieren der ABD-Matrix\n",
+    "6. Deformation infolge Schnittgrößen bestimmen\n",
+    "7. Verzerrrung jeder Schicht bestimmen\n",
+    "8. Spannungen jeder Schicht bestimmen\n",
+    "9. Spannungen jeder Schicht in1-2-Koordinatensystem transformieren\n",
+    "10. Festigkeitsanalyse jeder Schicht"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67455392",
+   "metadata": {},
+   "source": [
+    "### 1. Laminatschichten\n",
+    "\n",
+    "Fügen Sie eine Funktion hinzu, die die reduzierte Steifigkeitsmatrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b92f9da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SteifigkeitsMatrix:\n",
+    "    \"\"\"\n",
+    "    Klasse zur Berechnung der reduzierten Steifigkeitsmatrix für Verbundwerkstoffe.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, E1, E2, G12, v12):\n",
+    "        self.E1 = E1  # Elastizitätsmodul in Faserrichtung\n",
+    "        self.E2 = E2  # Elastizitätsmodul quer zur Faser\n",
+    "        self.G12 = G12  # Schubmodul\n",
+    "        self.v12 = v12  # Querkontraktionszahl\n",
+    "\n",
+    "    def calculate(self):\n",
+    "        \"\"\"\n",
+    "        Berechnet die reduzierte Steifigkeitsmatrix Q.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        return \n",
+    "\n",
+    "class Laminatschicht:\n",
+    "    \"\"\"\n",
+    "    Klasse zur Darstellung und Analyse von Laminatschichten.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, t, steifigkeit, theta):\n",
+    "        self.t = t  # Dicke der Schicht\n",
+    "        self.steifigkeit = steifigkeit  # Steifigkeitsmatrix\n",
+    "        self.theta = theta  # Faserorientierung in Grad\n",
+    "    \n",
+    "    def reduced_steifigkeit(self):\n",
+    "        \"\"\"\n",
+    "        Berechnet die reduzierte Steifigkeitsmatrix für die Laminatschicht.\n",
+    "        \"\"\"\n",
+    "        self.reduced_steifigkeit = self.steifigkeit.calculate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "297a40b5",
+   "metadata": {},
+   "source": [
+    "Die unten gegebenen Materialkennwerte beschreiben die Steifigkeit von einer Unidirektionalen Einzelschicht und einem Fasergewebe.\n",
+    "Initalisieren Sie die entsprechenden Schichtobjekte."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbf6b343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Unidirektionale Einzelschicht\n",
+    "E_1_UD = 135000. #MPa\n",
+    "E_2_UD = 10000. # MPa\n",
+    "nu_12_UD = 0.3\n",
+    "G_12_UD = 5000. # MPa\n",
+    "\n",
+    "## Gewebe\n",
+    "E_1_F = 70000. # MPa\n",
+    "E_2_F = 70000. # MPa\n",
+    "nu_12_F = 0.1\n",
+    "G_12_F = 5000. # MPa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dc20a6e",
+   "metadata": {},
+   "source": [
+    "Geben Sie jetzt die reduzierten Steifigkeitsmatritzen aus. Nutzen Sie hierfür die oben definierte Funktion sowie die <code> print_arr </code> Funktion zum ausgeben."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c13793c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aec6b9c1",
+   "metadata": {},
+   "source": [
+    "### 2. Transformieren in das globale Koordinatensystem\n",
+    "\n",
+    "Erstellen Sie eine Klasse <code>laminat</code>. Diese wird mit einer Liste von Einzelschichten initatilisert. Gehen Sie anschließend sicher, dass für jede Schicht eine reduzierte Steifigkeitsmatrix vorliegt. Schreiben sie anschließend eine Transofrmationsfunktion, die die Steifigkeiten in das globale Kooredinatensystem transformiert. Diese ist zweckmäßiger Weise teil der Klasse <code>Laminatschicht</code>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbd608f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Laminat:\n",
+    "    \"\"\"\n",
+    "    Klasse zur Darstellung und Analyse von Laminaten.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, schichten):\n",
+    "        pass\n",
+    "    \n",
+    "    def berechne_reduzierte_steifigkeit(self):\n",
+    "        \"\"\"\n",
+    "        Berechnet die Gesamtsteifigkeitsmatrix des Laminats.\n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ae977fc",
+   "metadata": {},
+   "source": [
+    "Plotten Sie anschließend die Werte der transformierten Steifigkeitsmatritzen in einem Polarplot über den Faserwinkel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73e6b1af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = np.arange(0,360,1)\n",
+    "Q11, Q22, Q12 = [], [], []\n",
+    "for thet in theta:\n",
+    "    steifigkeit = SteifigkeitsMatrix(E_1_UD, E_2_UD, G_12_UD, nu_12_UD)\n",
+    "    schicht = Laminatschicht(0.125, steifigkeit, thet)\n",
+    "    Q11.append\n",
+    "    Q22.append\n",
+    "    Q12.append\n",
+    "\n",
+    "fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
+    "ax.plot(theta, Q_11, label='Q_11')\n",
+    "ax.plot(theta, Q_22, label='Q_22')\n",
+    "ax.plot(theta, Q_12, label='Q_12')\n",
+    "ax.legend()\n",
+    "ax.set_rlabel_position(-22.5)\n",
+    "ax.grid(True)\n",
+    "\n",
+    "ax.set_title(\"Polarplot von Q_A\", va='bottom')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ac23eaa",
+   "metadata": {},
+   "source": [
+    "### 3. Berechnen der ABD-Matrix eines Laminats\n",
+    "\n",
+    "Fügen Sie zur Klasse <code>Laminat</code> eine Funktion zur Berechnung der ABD-Matrix hinzu. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4d097c2",
+   "metadata": {},
+   "source": [
+    "### 4. Invertieren der ABD-Matrix\n",
+    "\n",
+    "Speichern Sie auch die invertierte ABD-MAtrix ab. Welche Funktion hat die invertierte ABD-Matrix?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab2ba691",
+   "metadata": {},
+   "source": [
+    "### 5. Einsetzen von Beanspruchungen\n",
+    "\n",
+    "Geben Sie Beanspruchungen vor. Bauen Sie vorher ein Laminat aus der vorletzten Übung nach. Können Sie das beobachtetze Verhalten in Ihren Ergebnissen wieder finden?"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.13.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
