Correction for exercise 9

--- a/musterloesung09.ipynb
+++ b/musterloesung09.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "644c5266",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E= 205e6  # Modulus of Elasticity in MPa\n",
+    "E= 205e3  # Modulus of Elasticity in MPa\n",
     "I = 6.66  # Moment of Inertia in mm^4\n",
     "\n",
     "def w(x, c):\n",
@@ -103,6 +103,27 @@
     "    theta = dw_dx(L, c)\n",
     "    k = 1 / theta  # since M = 1 Nmm\n",
     "    return k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fb3893a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-20479499.999999996)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "determine_spring_constant(200)"
    ]
   },
   {
